--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,147 @@
   <name>hid4java</name>
   <description>A cross-platform Java Native Access (JNA) wrapper for the signal11/hidapi library</description>
 
+  <url>http://github.com/gary-rowe/hid4java</url>
+  <inceptionYear>2014</inceptionYear>
+
+  <organization>
+    <name>Gary Rowe</name>
+    <url>http://bitcoin-solutions.co.uk</url>
+  </organization>
+
+  <developers>
+    <developer>
+      <name>Gary Rowe</name>
+      <email>gary.rowe@bitcoin-solutions.co.uk</email>
+    </developer>
+    <developer>
+      <name>Jim Burton</name>
+      <email>jim.burton@bitcoin-solutions.co.uk</email>
+    </developer>
+  </developers>
+
+  <licenses>
+    <license>
+      <name>MIT</name>
+      <url>http://www.opensource.org/licenses/mit-license.php</url>
+      <distribution>repo</distribution>
+      <comments>All source code is under the MIT license.</comments>
+    </license>
+  </licenses>
+
+  <issueManagement>
+    <system>GitHub</system>
+    <url>https://github.com/gary-rowe/hid4java/issues</url>
+  </issueManagement>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>sonatype-nexus-snapshots</id>
+      <name>Sonatype Nexus Snapshots</name>
+      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>sonatype-nexus-staging</id>
+      <name>Nexus Release Repository</name>
+      <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+    <downloadUrl>https://oss.sonatype.org/content/groups/public/org/hid4java</downloadUrl>
+  </distributionManagement>
+
+  <scm>
+    <connection>scm:git:git@github.com:gary-rowe/hid4java.git</connection>
+    <developerConnection>scm:git:git@github.com:gary-rowe/hid4java.git</developerConnection>
+    <url>git@github.com:gary-rowe/hid4java.git</url>
+    <tag>HEAD</tag>
+  </scm>
+
+  <profiles>
+
+    <!-- To active this use 'mvn release:prepare release:perform' -->
+    <profile>
+      <id>release-sign-artifacts</id>
+      <activation>
+        <property>
+          <name>performRelease</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.4</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+  </profiles>
+
+  <build>
+    <plugins>
+      <!-- Ensure compilation is done under Java 7 in all environments -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+          <showDeprecation>true</showDeprecation>
+          <showWarnings>true</showWarnings>
+        </configuration>
+      </plugin>
+
+      <!-- Filter out functional tests by Maven (an IDE will run all tests including functional) -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.16</version>
+        <configuration>
+          <excludes>
+            <exclude>**/*FunctionalTest.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+
+      <!-- Generates a source code JAR during package -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.2.1</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- For deploying to Maven Central -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.4.1</version>
+        <configuration>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <!-- Java Native Access (JNA) -->
     <dependency>
