--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <inceptionYear>2014</inceptionYear>
 
   <organization>
-    <name>Gary Rowe</name>
+    <name>Bitcoin Solutions Ltd</name>
     <url>http://bitcoin-solutions.co.uk</url>
   </organization>
 
