--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>org.hid4java</groupId>
   <artifactId>hid4java</artifactId>
-  <version>0.1.0</version>
+  <version>develop-SNAPSHOT</version>
 
   <name>hid4java</name>
   <description>A cross-platform Java Native Access (JNA) wrapper for the signal11/hidapi library</description>
