--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 
   <profiles>
 
-    <!-- To active this use 'mvn release:prepare release:perform' -->
+    <!-- To activate this use 'mvn release:prepare release:perform' -->
     <profile>
       <id>release-sign-artifacts</id>
       <activation>
