Add fork for GPG signing

--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,7 @@
         <version>2.4.1</version>
         <configuration>
           <autoVersionSubmodules>true</autoVersionSubmodules>
+          <mavenExecutorId>forked-path</mavenExecutorId>
         </configuration>
       </plugin>
     </plugins>
