--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.hid4java</groupId>
   <artifactId>hid4java</artifactId>
-  <version>0.4.0-SNAPSHOT</version>
+  <version>0.4.0</version>
 
   <name>hid4java</name>
   <description>A cross-platform Java Native Access (JNA) wrapper for the signal11/hidapi library</description>
@@ -60,7 +60,7 @@
     <connection>scm:git:git@github.com:gary-rowe/hid4java.git</connection>
     <developerConnection>scm:git:git@github.com:gary-rowe/hid4java.git</developerConnection>
     <url>git@github.com:gary-rowe/hid4java.git</url>
-    <tag>HEAD</tag>
+    <tag>hid4java-0.4.0</tag>
   </scm>
 
   <properties>
