--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <name>hid4java</name>
   <description>A cross-platform Java Native Access (JNA) wrapper for the libusb/hidapi library</description>
 
-  <url>http://github.com/gary-rowe/hid4java</url>
+  <url>https://github.com/gary-rowe/hid4java</url>
   <inceptionYear>2014</inceptionYear>
 
   <developers>
@@ -22,7 +22,7 @@
   <licenses>
     <license>
       <name>MIT</name>
-      <url>http://www.opensource.org/licenses/mit-license.php</url>
+      <url>https://www.opensource.org/licenses/mit-license.php</url>
       <distribution>repo</distribution>
       <comments>All source code is under the MIT license.</comments>
     </license>
@@ -37,12 +37,12 @@
     <snapshotRepository>
       <id>sonatype-nexus-snapshots</id>
       <name>Sonatype Nexus Snapshots</name>
-      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
     <repository>
       <id>sonatype-nexus-staging</id>
       <name>Nexus Release Repository</name>
-      <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
     <downloadUrl>https://oss.sonatype.org/content/groups/public/org/hid4java</downloadUrl>
   </distributionManagement>
@@ -100,8 +100,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
           <showDeprecation>true</showDeprecation>
           <showWarnings>true</showWarnings>
         </configuration>
