Correct email address in POM

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <developers>
     <developer>
       <name>Gary Rowe</name>
-      <email>gary.rowe@froot.co.uk</email>
+      <email>g.rowe@froot.co.uk</email>
     </developer>
   </developers>
 
