--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.hid4java</groupId>
   <artifactId>hid4java</artifactId>
-  <version>0.7.0</version>
+  <version>develop-SNAPSHOT</version>
 
   <name>hid4java</name>
   <description>A cross-platform Java Native Access (JNA) wrapper for the libusb/hidapi library</description>
@@ -51,7 +51,7 @@
     <connection>scm:git:git@github.com:gary-rowe/hid4java.git</connection>
     <developerConnection>scm:git:git@github.com:gary-rowe/hid4java.git</developerConnection>
     <url>git@github.com:gary-rowe/hid4java.git</url>
-    <tag>hid4java-0.7.0</tag>
+    <tag>hid4java-0.6.0</tag>
   </scm>
 
   <properties>
