--- a/pom.xml
+++ b/pom.xml
@@ -184,7 +184,7 @@
     <dependency>
       <groupId>net.java.dev.jna</groupId>
       <artifactId>jna</artifactId>
-      <version>issue-93-SNAPSHOT</version>
+      <version>5.7.0-SNAPSHOT</version>
     </dependency>
 
     <!-- JUnit -->
