--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,8 @@
   <properties>
     <!-- Ensure source is under UTF-8 -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>19</maven.compiler.source>
+    <maven.compiler.target>19</maven.compiler.target>
   </properties>
 
   <profiles>
@@ -97,13 +99,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-          <showDeprecation>true</showDeprecation>
-          <showWarnings>true</showWarnings>
-        </configuration>
+        <version>3.10.1</version>
       </plugin>
 
       <!-- Filter out functional tests by Maven (an IDE will run all tests including functional) -->
@@ -184,14 +180,14 @@
     <dependency>
       <groupId>net.java.dev.jna</groupId>
       <artifactId>jna</artifactId>
-      <version>5.7.0</version>
+      <version>5.12.1</version>
     </dependency>
 
     <!-- JUnit -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>5.7.0-M1</version>
+      <version>5.9.0</version>
       <scope>test</scope>
     </dependency>
 
